--- a/public/contact.html
+++ b/public/contact.html
@@ -1,10 +1,10 @@
 <h1>Contact Me</h1>
-<p>Tel: +55 (11) 939485430</p>
-<p>Email: kalelpaulo01@gmail.com</p>
+<p>Tel: +55 (11) 93999999</p>
+<p>Email: kalelaraujo@email.com</p>
 <b>Address:</b>
 
 <p>
-  Rua Antônio Batista de Oliveira - Guarulhos<br />
+  Rua Street 10 Block<br />
   São Paulo<br />
   Brazil<br />
 </p>
